base/jaeger/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    jaeger-infra: jaeger-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jaeger
      jaeger-infra: jaeger-pod
  template:
    metadata:
      labels:
        app: jaeger
        jaeger-infra: jaeger-pod
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "16686"
    spec:
      containers:
        - env:
            - name: COLLECTOR_ZIPKIN_HTTP_PORT
              value: "9411"
            - name: MAX_TRACES
              value: "50000"
          image: quay.io/rh_integration/jaeger-aio:latest
          name: jaeger
          args: ["--memory.max-traces=$(MAX_TRACES)"]
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 9411
              protocol: TCP
            - containerPort: 5778
              protocol: TCP
          readinessProbe:
            httpGet:
              path: "/"
              port: 14269
            initialDelaySeconds: 5
          resources:
            limits:
              cpu: "500m"
              memory: "2Gi"
            requests:
              cpu: "100m"
              memory: "100Mi"
