base/jaeger/service-agent.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-agent
  labels:
    jaeger-infra: agent-service
spec:
  ports:
    - name: agent-zipkin-thrift
      port: 5775
      protocol: UDP
      targetPort: 5775
    - name: agent-compact
      port: 6831
      protocol: UDP
      targetPort: 6831
    - name: agent-binary
      port: 6832
      protocol: UDP
      targetPort: 6832
    - name: agent-sampler-manager
      port: 5778
      protocol: TCP
      targetPort: 5778
  clusterIP: None
  selector:
    jaeger-infra: jaeger-pod
