base/jaeger/service-collector.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  labels:
    jaeger-infra: collector-service
spec:
  ports:
    - name: jaeger-collector-grpc
      port: 14250
      protocol: TCP
      targetPort: 14250
    - name: jaeger-collector-tchannel
      port: 14267
      protocol: TCP
      targetPort: 14267
    - name: jaeger-collector-http
      port: 14268
      protocol: TCP
      targetPort: 14268
    - name: jaeger-collector-zipkin
      port: 9411
      protocol: TCP
      targetPort: 9411
  selector:
    jaeger-infra: jaeger-pod
  type: ClusterIP
