base/jaeger/service-query.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  labels:
    jaeger-infra: jaeger-service
spec:
  ports:
    - name: query-http
      port: 80
      protocol: TCP
      targetPort: 16686
  selector:
    jaeger-infra: jaeger-pod
  type: ClusterIP
