base/jaeger/service-zipkin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    jaeger-infra: zipkin-service
spec:
  ports:
    - name: jaeger-zipkin-http
      port: 9411
      protocol: TCP
      targetPort: 9411
  selector:
    jaeger-infra: jaeger-pod
  type: ClusterIP
